adds choice box to page

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ header {
   background: rgb(4, 4, 212);
   color: white;
   border: 3px solid salmon;
-  height: 200px;
+  height: 300px;
   width: 260px;
 }
 
@@ -36,35 +36,6 @@ header {
   background: rgb(79, 79, 132);
   color: white;
   border: 3px solid salmon;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+  height: 300px;
+  width: 360px;
 }
