--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* html,
+body {
+  height: 800px;
+} */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
